[package]
name = "avalanche-network-runner-sdk"
version = "0.0.0"
edition = "2021"
rust-version = "1.60"
publish = false
description = "avalanche-network-runner SDK in Rust"
license = "BSD-3-Clause"
homepage = "https://avax.network"
repository = "https://github.com/ava-labs/avalanche-network-runner"
readme = "README.md"

[dependencies]
log = "0.4.16"
prost = "0.10.1"
prost-types = "0.10.1"
tokio = { version = "1.17.0", features = ["fs", "rt-multi-thread"] }
tokio-stream = { version = "0.1.8", features = ["net"] }
tonic = "0.7.1"

[build-dependencies]
# ref. https://github.com/hyperium/tonic/tree/master/tonic-build
tonic-build = "0.7.0"

[dev-dependencies]
env_logger = "0.9.0"
